implements predicting phase

--- a/1_first_model_experiments.ipynb
+++ b/1_first_model_experiments.ipynb
@@ -1222,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1280,17 +1280,31 @@
     "    def predict(self, X: Any):\n",
     "        # TODO: any way to check if model was already trained?\n",
     "\n",
-    "        first_layer_predictions = self.first_layer_classifiers.predict(X)\n",
+    "        predictions = self.first_layer_classifiers.predict(X)\n",
     "\n",
-    "        df_temp = pd.DataFrame(m)\n",
+    "        df_temp = pd.DataFrame(self.m)\n",
+    "        # TODO: come up with a better name for \"self.m\"\n",
+    "        # it is the map of correlated labels\n",
+    "        # which was obtained in the training phase\n",
+    "        \n",
     "        labels_count = predictions.shape[1]\n",
     "\n",
-    "        for i in range(labels_count):\n",
-    "            pass\n",
+    "        second_layer_predictions = []\n",
     "\n",
-    "        X_expanded = np.hstack(\n",
-    "            [X.todense(), first_layer_predictions.todense()])\n",
-    "        return self.second_layer_classifiers.predict(X_expanded)\n",
+    "        for i in range(labels_count):\n",
+    "            mask = df_m[\"for_label\"] == i\n",
+    "            split_df = df_m[mask].reset_index(drop=True)\n",
+    "            labels_to_expand = split_df[\"expand_this_label\"].to_list()\n",
+    "\n",
+    "            additional_input = predictions.todense()[:, labels_to_expand]\n",
+    "            \n",
+    "            X_expanded = np.hstack([X.todense(), additional_input])\n",
+    "            X_expanded = np.asarray(X_expanded)\n",
+    "\n",
+    "            temp_preds = self.second_layer_classifiers[i].predict(X_expanded)\n",
+    "            second_layer_predictions.append(temp_preds)\n",
+    "        \n",
+    "        return second_layer_predictions\n",
     "    \n",
     "    def calculate_f_test_for_all_label_pairs(self, predictions: Any) -> List[Dict[str, Any]]:\n",
     "        labels_count = predictions.shape[1]\n",
@@ -1358,7 +1372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -1376,212 +1390,47 @@
    ],
    "source": [
     "clf = StackingWithFTests()\n",
-    "m = clf.fit(X_train, y_train)\n"
+    "clf.fit(X_train, y_train)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = clf.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = np.asarray(a).T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0 0]\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " ...\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [0 0]]\n",
-      "[[0 0]\n",
-      " [1 0]\n",
-      " [0 0]\n",
-      " ...\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [1 0]]\n",
-      "[[0 0]\n",
-      " [1 0]\n",
-      " [0 0]\n",
-      " ...\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [1 0]]\n",
-      "[[0 0]\n",
-      " [1 0]\n",
-      " [0 0]\n",
-      " ...\n",
-      " [0 1]\n",
-      " [0 0]\n",
-      " [1 0]]\n",
-      "[[0 0]\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " ...\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [0 0]]\n",
-      "[[0 0]\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " ...\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [0 0]]\n"
+      "Accuracy score:  0.5994983277591973\n",
+      "Hamming loss:  0.08319397993311037\n"
      ]
     }
    ],
    "source": [
-    "df_m = pd.DataFrame(m)\n",
-    "labels_count = 6\n",
+    "accuracy_score = metrics.accuracy_score(y_test, b)\n",
+    "hamming_loss = metrics.hamming_loss(y_test, b)\n",
     "\n",
-    "for i in range(labels_count):\n",
-    "    mask = df_m[\"for_label\"] == i\n",
-    "    split_df = df_m[mask].reset_index(drop=True)\n",
-    "    labels_to_expand = split_df[\"expand_this_label\"].to_list()\n",
-    "\n",
-    "    print(preds.todense()[:, labels_to_expand])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_m[\"for_label\"].nunique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "matrix([[0, 0],\n",
-       "        [1, 0],\n",
-       "        [0, 0],\n",
-       "        [0, 0],\n",
-       "        [0, 0],\n",
-       "        [0, 0],\n",
-       "        [0, 0],\n",
-       "        [0, 0],\n",
-       "        [0, 0],\n",
-       "        [0, 0],\n",
-       "        [0, 0],\n",
-       "        [1, 0],\n",
-       "        [0, 0],\n",
-       "        [1, 0],\n",
-       "        [1, 0],\n",
-       "        [0, 0],\n",
-       "        [0, 0],\n",
-       "        [1, 0],\n",
-       "        [0, 0],\n",
-       "        [1, 0],\n",
-       "        [1, 0],\n",
-       "        [0, 0],\n",
-       "        [1, 0],\n",
-       "        [0, 0],\n",
-       "        [0, 0],\n",
-       "        [1, 0],\n",
-       "        [1, 0],\n",
-       "        [1, 0],\n",
-       "        [1, 0],\n",
-       "        [0, 0]], dtype=int64)"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "preds.todense()[:30,[0,1]]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "matrix([[1, 0, 0, 0, 1, 0],\n",
-       "        [1, 0, 0, 0, 0, 0],\n",
-       "        [1, 0, 0, 0, 0, 0],\n",
-       "        [1, 0, 0, 0, 1, 0],\n",
-       "        [1, 0, 0, 0, 0, 0],\n",
-       "        [1, 0, 0, 0, 0, 0],\n",
-       "        [1, 0, 0, 0, 0, 0],\n",
-       "        [1, 0, 0, 0, 0, 0],\n",
-       "        [1, 0, 0, 0, 0, 0],\n",
-       "        [1, 0, 0, 0, 0, 0],\n",
-       "        [1, 0, 0, 0, 0, 0],\n",
-       "        [1, 0, 0, 0, 0, 0],\n",
-       "        [1, 0, 0, 0, 0, 0],\n",
-       "        [1, 0, 0, 0, 0, 0],\n",
-       "        [1, 0, 0, 0, 0, 0],\n",
-       "        [1, 0, 0, 0, 0, 0],\n",
-       "        [1, 0, 0, 0, 0, 0],\n",
-       "        [1, 0, 0, 0, 1, 0],\n",
-       "        [1, 0, 0, 0, 0, 0],\n",
-       "        [1, 0, 0, 0, 0, 0],\n",
-       "        [1, 0, 0, 0, 1, 0],\n",
-       "        [1, 0, 0, 0, 0, 0],\n",
-       "        [1, 0, 0, 0, 0, 0],\n",
-       "        [1, 0, 0, 0, 0, 0],\n",
-       "        [1, 0, 0, 0, 0, 0]], dtype=int64)"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y_test.todense()[0:25,:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "matrix([[0, 0],\n",
-       "        [0, 0],\n",
-       "        [0, 0],\n",
-       "        ...,\n",
-       "        [0, 0],\n",
-       "        [0, 0],\n",
-       "        [0, 0]], dtype=int64)"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "preds.todense()[:, [1,2]]"
+    "print(\"Accuracy score: \", accuracy_score)\n",
+    "print(\"Hamming loss: \", hamming_loss)\n"
    ]
   }
  ],
