--- a/1_first_model_experiments.ipynb
+++ b/1_first_model_experiments.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
        "              'yeast-train.scikitml.bz2']})"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,17 +171,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "scene:train - does not exists downloading\n",
-      "Downloaded scene-train\n",
-      "scene:test - does not exists downloading\n",
-      "Downloaded scene-test\n"
+      "scene:train - exists, not redownloading\n",
+      "scene:test - exists, not redownloading\n"
      ]
     }
    ],
@@ -194,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -496,18 +494,18 @@
        " ('Att294', 'NUMERIC')]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "feature_names\n"
+    "feature_names"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -521,13 +519,13 @@
        " ('Urban', ['0', '1'])]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "label_names\n"
+    "label_names"
    ]
   },
   {
@@ -541,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -562,27 +560,27 @@
        "BinaryRelevance(classifier=SVC(), require_dense=[False, True])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "clf.fit(X_train, y_train)\n"
+    "clf.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prediction = clf.predict(X_test)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prediction = clf.predict(X_test)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -597,18 +595,18 @@
        "        [1, 0, 0, 0, 0, 0]], dtype=int64)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "prediction.todense()\n"
+    "prediction.todense()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +620,7 @@
        " ('Urban', ['0', '1'])]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -633,19 +631,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'y_test' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-2-c7d288e37b37>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mregular_br_hamming_loss\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmetrics\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhamming_loss\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mprediction\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mregular_br_hamming_loss\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'y_test' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "0.08416945373467112"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -655,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +661,7 @@
        "0.5869565217391305"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -713,23 +710,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0.646467 0.666435 0.685047 ... 0.       0.       0.      ]\n",
-      " [0.770156 0.767255 0.761053 ... 0.       0.       0.      ]\n",
-      " [0.793984 0.772096 0.76182  ... 0.       0.       0.      ]\n",
-      " ...\n",
-      " [0.85639  1.       1.       ... 0.       0.       0.      ]\n",
-      " [0.805592 0.80417  0.811438 ... 0.       0.       1.      ]\n",
-      " [0.855064 0.858896 0.911177 ... 0.       0.       1.      ]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = BasicStacking()\n",
     "model.fit(X_train, y_train)"
@@ -737,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -746,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -940,6 +923,10 @@
     }
    ],
    "source": [
+    "# notice: this cell takes a long time to run\n",
+    "# the results are already saved in the file `1_first_model_experiments_other_datasets_metrics.json`\n",
+    "# so you can skip this cell\n",
+    "\n",
     "pipeline = BasicStackingAgainstBinaryRelevanceBaselineTest()\n",
     "pipeline.run()"
    ]
@@ -997,14 +984,14 @@
    "source": [
     "## 1.5. Implementing the specialized model\n",
     "\n",
-    "Model based on -> TODO: Insert the article reference here\n",
+    "Model based on this article: [\"An efficient stacking model with label selection for multi-label classification\"](https://link.springer.com/article/10.1007/s10489-020-01807-z).\n",
     "\n",
     "Let's start with some basic experiments to understand how to code certain sections of the model."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1044,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1053,7 +1040,7 @@
        "(1196, 6)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1064,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1073,7 +1060,7 @@
        "6"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1103,6 +1090,9 @@
     "        y = np.asarray(y).reshape(-1)\n",
     "\n",
     "        f_test_result = float(f_classif(X, y)[0])\n",
+    "        # as per the documentation: https://scikit-learn.org/stable/modules/generated/sklearn.feature_selection.f_classif.html\n",
+    "        # `f_classif` returns a tuple of two arrays, the first one is the F-value and the second one is the p-value\n",
+    "        # we only need the F-value\n",
     "\n",
     "        results.append({\n",
     "            \"label_being_tested\": i,\n",
@@ -1276,35 +1266,6 @@
     "\n",
     "            self.second_layer_classifiers.append(meta_classifier)\n",
     "            print(f\"finished training meta classifier for label {i}\")\n",
-    "\n",
-    "    def predict(self, X: Any):\n",
-    "        # TODO: any way to check if model was already trained?\n",
-    "\n",
-    "        predictions = self.first_layer_classifiers.predict(X)\n",
-    "\n",
-    "        df_temp = pd.DataFrame(self.m)\n",
-    "        # TODO: come up with a better name for \"self.m\"\n",
-    "        # it is the map of correlated labels\n",
-    "        # which was obtained in the training phase\n",
-    "        \n",
-    "        labels_count = predictions.shape[1]\n",
-    "\n",
-    "        second_layer_predictions = []\n",
-    "\n",
-    "        for i in range(labels_count):\n",
-    "            mask = df_m[\"for_label\"] == i\n",
-    "            split_df = df_m[mask].reset_index(drop=True)\n",
-    "            labels_to_expand = split_df[\"expand_this_label\"].to_list()\n",
-    "\n",
-    "            additional_input = predictions.todense()[:, labels_to_expand]\n",
-    "            \n",
-    "            X_expanded = np.hstack([X.todense(), additional_input])\n",
-    "            X_expanded = np.asarray(X_expanded)\n",
-    "\n",
-    "            temp_preds = self.second_layer_classifiers[i].predict(X_expanded)\n",
-    "            second_layer_predictions.append(temp_preds)\n",
-    "        \n",
-    "        return second_layer_predictions\n",
     "    \n",
     "    def calculate_f_test_for_all_label_pairs(self, predictions: Any) -> List[Dict[str, Any]]:\n",
     "        labels_count = predictions.shape[1]\n",
@@ -1367,7 +1328,36 @@
     "                    \"f_test_result\": float(row[\"f_test_result\"]),\n",
     "                })\n",
     "        \n",
-    "        return selected_features\n"
+    "        return selected_features\n",
+    "    \n",
+    "    def predict(self, X: Any) -> List[Any]:\n",
+    "        # TODO: any way to check if model was already trained?\n",
+    "\n",
+    "        predictions = self.first_layer_classifiers.predict(X)\n",
+    "\n",
+    "        df_temp = pd.DataFrame(self.m)\n",
+    "        # TODO: come up with a better name for \"self.m\"\n",
+    "        # it is the map of correlated labels\n",
+    "        # which was obtained in the training phase\n",
+    "\n",
+    "        labels_count = predictions.shape[1]\n",
+    "\n",
+    "        second_layer_predictions = []\n",
+    "\n",
+    "        for i in range(labels_count):\n",
+    "            mask = df_m[\"for_label\"] == i\n",
+    "            split_df = df_m[mask].reset_index(drop=True)\n",
+    "            labels_to_expand = split_df[\"expand_this_label\"].to_list()\n",
+    "\n",
+    "            additional_input = predictions.todense()[:, labels_to_expand]\n",
+    "\n",
+    "            X_expanded = np.hstack([X.todense(), additional_input])\n",
+    "            X_expanded = np.asarray(X_expanded)\n",
+    "\n",
+    "            temp_preds = self.second_layer_classifiers[i].predict(X_expanded)\n",
+    "            second_layer_predictions.append(temp_preds)\n",
+    "\n",
+    "        return second_layer_predictions\n"
    ]
   },
   {
