fixes some issues with the first model

--- a/1_first_model_experiments.ipynb
+++ b/1_first_model_experiments.ipynb
@@ -1212,13 +1212,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "class StackingWithFTests(ProblemTransformationBase):\n",
     "    first_layer_classifiers: BinaryRelevance\n",
-    "    second_layer_classifiers: BinaryRelevance\n",
+    "    second_layer_classifiers: List[Any] # TODO should be any generic type of classifier\n",
     "\n",
     "    def __init__(self, classifier: Any = None, require_dense: Optional[List[bool]] = None):\n",
     "        super(StackingWithFTests, self).__init__(classifier, require_dense)\n",
@@ -1231,7 +1231,7 @@
     "        # right now I am forcing the use of SVC\n",
     "\n",
     "        self.second_layer_classifiers = []\n",
-    "        # TODO: add typing to this\n",
+    "        self.correlated_labels_map = pd.DataFrame()\n",
     "\n",
     "    def fit(self, X: Any, y: Any):\n",
     "        self.first_layer_classifiers.fit(X, y)\n",
@@ -1241,16 +1241,14 @@
     "        \n",
     "        alpha = 0.6\n",
     "\n",
-    "        r = self.calculate_f_test_for_all_label_pairs(predictions)\n",
-    "        m = self.get_map_of_correlated_labels(r, alpha)\n",
-    "        self.m = m\n",
+    "        f_tested_label_pairs = self.calculate_f_test_for_all_label_pairs(predictions)\n",
+    "        self.correlated_labels_map = self.get_map_of_correlated_labels(f_tested_label_pairs, alpha)\n",
     "\n",
-    "        df_temp = pd.DataFrame(m)\n",
     "        labels_count = predictions.shape[1]\n",
     "\n",
     "        for i in range(labels_count):\n",
-    "            mask = df_m[\"for_label\"] == i\n",
-    "            split_df = df_m[mask].reset_index(drop=True)\n",
+    "            mask = self.correlated_labels_map[\"for_label\"] == i\n",
+    "            split_df = self.correlated_labels_map[mask].reset_index(drop=True)\n",
     "            labels_to_expand = split_df[\"expand_this_label\"].to_list()\n",
     "\n",
     "            additional_input = predictions.todense()[:, labels_to_expand]\n",
@@ -1298,13 +1296,14 @@
     "    def convert_matrix_to_vector(self, matrix: Any):\n",
     "        return np.asarray(matrix).reshape(-1)\n",
     "    \n",
-    "    def get_map_of_correlated_labels(self, f_test_results: List[Dict[str, Any]], alpha: float) -> List[Dict[str, Any]]:\n",
+    "    def get_map_of_correlated_labels(self, f_test_results: List[Dict[str, Any]], alpha: float) -> pd.DataFrame:\n",
     "        # TODO must ensure alpha > 0.0 && <= 1.0\n",
     "\n",
     "        temp_df = pd.DataFrame(f_test_results)\n",
     "        \n",
-    "        sorted_temp_df = temp_df.sort_values(by=[\"label_being_tested\", \"f_test_result\"],\n",
-    "                        ascending=[True, False])\n",
+    "        sorted_temp_df = temp_df.sort_values(\n",
+    "            by=[\"label_being_tested\", \"f_test_result\"],\n",
+    "            ascending=[True, False])\n",
     "        # this will make it easier to select the features afterwards\n",
     "\n",
     "        selected_features = []\n",
@@ -1328,25 +1327,21 @@
     "                    \"f_test_result\": float(row[\"f_test_result\"]),\n",
     "                })\n",
     "        \n",
-    "        return selected_features\n",
+    "        return pd.DataFrame(selected_features)\n",
     "    \n",
     "    def predict(self, X: Any) -> List[Any]:\n",
-    "        # TODO: any way to check if model was already trained?\n",
+    "        if self.correlated_labels_map.empty:\n",
+    "            raise Exception(\"model was not trained yet\")\n",
+    "\n",
     "\n",
     "        predictions = self.first_layer_classifiers.predict(X)\n",
-    "\n",
-    "        df_temp = pd.DataFrame(self.m)\n",
-    "        # TODO: come up with a better name for \"self.m\"\n",
-    "        # it is the map of correlated labels\n",
-    "        # which was obtained in the training phase\n",
-    "\n",
     "        labels_count = predictions.shape[1]\n",
     "\n",
     "        second_layer_predictions = []\n",
     "\n",
     "        for i in range(labels_count):\n",
-    "            mask = df_m[\"for_label\"] == i\n",
-    "            split_df = df_m[mask].reset_index(drop=True)\n",
+    "            mask = self.correlated_labels_map[\"for_label\"] == i\n",
+    "            split_df = self.correlated_labels_map[mask].reset_index(drop=True)\n",
     "            labels_to_expand = split_df[\"expand_this_label\"].to_list()\n",
     "\n",
     "            additional_input = predictions.todense()[:, labels_to_expand]\n",
@@ -1362,22 +1357,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "finished training meta classifier for label 0\n",
-      "finished training meta classifier for label 1\n",
-      "finished training meta classifier for label 2\n",
-      "finished training meta classifier for label 3\n",
-      "finished training meta classifier for label 4\n",
-      "finished training meta classifier for label 5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "clf = StackingWithFTests()\n",
     "clf.fit(X_train, y_train)\n"
