adjusts model to always output preds in the correct format

--- a/1_first_model_experiments.ipynb
+++ b/1_first_model_experiments.ipynb
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +560,7 @@
        "BinaryRelevance(classifier=SVC(), require_dense=[False, True])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -571,16 +571,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<1196x6 sparse matrix of type '<class 'numpy.int64'>'\n",
+       "\twith 901 stored elements in Compressed Sparse Column format>"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "prediction = clf.predict(X_test)"
+    "prediction = clf.predict(X_test)\n",
+    "prediction\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +608,7 @@
        "        [1, 0, 0, 0, 0, 0]], dtype=int64)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1212,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1329,7 +1342,7 @@
     "        \n",
     "        return pd.DataFrame(selected_features)\n",
     "    \n",
-    "    def predict(self, X: Any) -> List[Any]:\n",
+    "    def predict(self, X: Any) -> np.ndarray[Any,Any]:\n",
     "        if self.correlated_labels_map.empty:\n",
     "            raise Exception(\"model was not trained yet\")\n",
     "\n",
@@ -1352,57 +1365,97 @@
     "            temp_preds = self.second_layer_classifiers[i].predict(X_expanded)\n",
     "            second_layer_predictions.append(temp_preds)\n",
     "\n",
-    "        return second_layer_predictions\n"
+    "        reshaped_array = np.asarray(second_layer_predictions).T\n",
+    "        return reshaped_array\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "clf = StackingWithFTests()\n",
-    "clf.fit(X_train, y_train)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = clf.predict(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b = np.asarray(a).T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy score:  0.5994983277591973\n",
-      "Hamming loss:  0.08319397993311037\n"
+      "finished training meta classifier for label 0\n",
+      "finished training meta classifier for label 1\n",
+      "finished training meta classifier for label 2\n",
+      "finished training meta classifier for label 3\n",
+      "finished training meta classifier for label 4\n",
+      "finished training meta classifier for label 5\n"
      ]
     }
    ],
    "source": [
-    "accuracy_score = metrics.accuracy_score(y_test, b)\n",
-    "hamming_loss = metrics.hamming_loss(y_test, b)\n",
+    "fist_model_clf = StackingWithFTests()\n",
+    "fist_model_clf.fit(X_train, y_train)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 0, 0, 0, 0],\n",
+       "       [1, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0],\n",
+       "       ...,\n",
+       "       [0, 0, 0, 0, 0, 1],\n",
+       "       [0, 0, 0, 0, 0, 0],\n",
+       "       [1, 0, 0, 0, 0, 0]], dtype=int64)"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fist_model_preds = fist_model_clf.predict(X_test)\n",
+    "fist_model_preds\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "br hamming_loss 0.08416945373467112\n",
+      "br accuracy 0.5869565217391305\n",
+      "===\n",
+      "stacking hamming_loss 0.08416945373467112\n",
+      "stacking accuracy 0.5869565217391305\n",
+      "===\n",
+      "first_model hamming_loss:  0.08319397993311037\n",
+      "first_model accuracy:  0.5994983277591973\n",
+      "===\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_model_hamming_loss = metrics.hamming_loss(y_test, fist_model_preds)\n",
+    "first_model_accuracy_score = metrics.accuracy_score(y_test, fist_model_preds)\n",
     "\n",
-    "print(\"Accuracy score: \", accuracy_score)\n",
-    "print(\"Hamming loss: \", hamming_loss)\n"
+    "\n",
+    "print(\"br hamming_loss\", regular_br_hamming_loss)\n",
+    "print(\"br accuracy\", regular_br_accuracy_score)\n",
+    "print(\"===\")\n",
+    "\n",
+    "print(\"stacking hamming_loss\", stacking_hamming_loss)\n",
+    "print(\"stacking accuracy\", stacking_accuracy_score)\n",
+    "print(\"===\")\n",
+    "\n",
+    "print(\"first_model hamming_loss: \", first_model_hamming_loss)\n",
+    "print(\"first_model accuracy: \", first_model_accuracy_score)\n",
+    "print(\"===\")\n"
    ]
   }
  ],
