adds flag to take f_test from training data or from first layer classifications

--- a/1_first_model_experiments.ipynb
+++ b/1_first_model_experiments.ipynb
@@ -1225,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1246,25 +1246,36 @@
     "        self.second_layer_classifiers = []\n",
     "        self.correlated_labels_map = pd.DataFrame()\n",
     "\n",
+    "        self.should_calculate_correlation_based_on_train_data = True\n",
+    "        self.should_calculate_correlation_based_on_first_layer_predictions = False\n",
+    "\n",
     "    def fit(self, X: Any, y: Any):\n",
     "        self.first_layer_classifiers.fit(X, y)\n",
     "\n",
-    "        predictions = self.first_layer_classifiers.predict(X)\n",
-    "        # TODO: does it really make sense to take predictions over the same set of data used for training?\n",
+    "        # predictions = self.first_layer_classifiers.predict(X)\n",
+    "        # # TODO: does it really make sense to take predictions over the same set of data used for training?\n",
     "        \n",
     "        alpha = 0.6\n",
     "\n",
-    "        f_tested_label_pairs = self.calculate_f_test_for_all_label_pairs(predictions)\n",
+    "        if self.should_calculate_correlation_based_on_train_data:\n",
+    "            label_classifications = y\n",
+    "        elif self.should_calculate_correlation_based_on_first_layer_predictions:\n",
+    "            label_classifications = self.first_layer_classifiers.predict(X)\n",
+    "        else:\n",
+    "            label_classifications = y\n",
+    "            # TODO: for now, it is the default behaviour\n",
+    "\n",
+    "        f_tested_label_pairs = self.calculate_f_test_for_all_label_pairs(label_classifications)\n",
     "        self.correlated_labels_map = self.get_map_of_correlated_labels(f_tested_label_pairs, alpha)\n",
     "\n",
-    "        labels_count = predictions.shape[1]\n",
+    "        labels_count = label_classifications.shape[1]\n",
     "\n",
     "        for i in range(labels_count):\n",
     "            mask = self.correlated_labels_map[\"for_label\"] == i\n",
     "            split_df = self.correlated_labels_map[mask].reset_index(drop=True)\n",
     "            labels_to_expand = split_df[\"expand_this_label\"].to_list()\n",
     "\n",
-    "            additional_input = predictions.todense()[:, labels_to_expand]\n",
+    "            additional_input = label_classifications.todense()[:, labels_to_expand]\n",
     "            \n",
     "            X_expanded = np.hstack([X.todense(), additional_input])\n",
     "            X_expanded = np.asarray(X_expanded)\n",
@@ -1317,7 +1328,8 @@
     "        sorted_temp_df = temp_df.sort_values(\n",
     "            by=[\"label_being_tested\", \"f_test_result\"],\n",
     "            ascending=[True, False])\n",
-    "        # this will make it easier to select the features afterwards\n",
+    "        # ordering in descending order by the F-test result,\n",
+    "        # following what the main article describes\n",
     "\n",
     "        selected_features = []\n",
     "\n",
@@ -1346,7 +1358,6 @@
     "        if self.correlated_labels_map.empty:\n",
     "            raise Exception(\"model was not trained yet\")\n",
     "\n",
-    "\n",
     "        predictions = self.first_layer_classifiers.predict(X)\n",
     "        labels_count = predictions.shape[1]\n",
     "\n",
@@ -1371,7 +1382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1388,13 +1399,15 @@
     }
    ],
    "source": [
-    "fist_model_clf = StackingWithFTests()\n",
-    "fist_model_clf.fit(X_train, y_train)\n"
+    "first_model_clf = StackingWithFTests()\n",
+    "first_model_clf.should_calculate_correlation_based_on_train_data = False\n",
+    "first_model_clf.should_calculate_correlation_based_on_first_layer_predictions = True\n",
+    "first_model_clf.fit(X_train, y_train)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1409,19 +1422,19 @@
        "       [1, 0, 0, 0, 0, 0]], dtype=int64)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fist_model_preds = fist_model_clf.predict(X_test)\n",
-    "fist_model_preds\n"
+    "first_model_preds = first_model_clf.predict(X_test)\n",
+    "first_model_preds\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1441,8 +1454,8 @@
     }
    ],
    "source": [
-    "first_model_hamming_loss = metrics.hamming_loss(y_test, fist_model_preds)\n",
-    "first_model_accuracy_score = metrics.accuracy_score(y_test, fist_model_preds)\n",
+    "first_model_hamming_loss = metrics.hamming_loss(y_test, first_model_preds)\n",
+    "first_model_accuracy_score = metrics.accuracy_score(y_test, first_model_preds)\n",
     "\n",
     "\n",
     "print(\"br hamming_loss\", regular_br_hamming_loss)\n",
@@ -1456,6 +1469,43 @@
     "print(\"first_model hamming_loss: \", first_model_hamming_loss)\n",
     "print(\"first_model accuracy: \", first_model_accuracy_score)\n",
     "print(\"===\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "first_model hamming_loss:  0.0838907469342252\n",
+    "first_model accuracy:  0.6304347826086957\n",
+    "===\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.5.1. Notes during development\n",
+    "\n",
+    "The article is not entirely clear if the label correlations should be calculated considering the label classifications present  in the training set (taken during `fit()`), or if it should be calculated considering the label classifications generated by the first layer of Binary Relevance classifiers.\n",
+    "\n",
+    "At first, it seems that calculating the correlations based on the full training data would give you better results as you are taking the _true labels_. On the other hard, this also means not using the first layer of classifiers at all during training, which also seems wrong.\n",
+    "\n",
+    "I made some tests and these are the results:\n",
+    "\n",
+    "- **(1) Label correlation from the training data**:\n",
+    "  - hamming_loss: 0.0838907469342252\n",
+    "  - accuracy: 0.6304347826086957\n",
+    "\n",
+    "- **(2) Label correlation from the first layer of classifiers**:\n",
+    "  - hamming_loss: 0.08319397993311037\n",
+    "  - accuracy: 0.5994983277591973\n",
+    "\n",
+    "For scenario (1), while the `hamming_loss` increases a bit, the accuracy is considerable higher. This seems to indicate and advantage of using the training data to calculate the label correlations, which actually makes total sense. I would not expect it to be differently, unless something is wrong with the implementation.\n",
+    "\n",
+    "I'll leave this as an optional parameter to test it when I have all the models done and ready for the \"heavy testing\"."
    ]
   }
  ],
