--- a/1_first_model_experiments.ipynb
+++ b/1_first_model_experiments.ipynb
@@ -1225,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1233,9 +1233,16 @@
     "    first_layer_classifiers: BinaryRelevance\n",
     "    second_layer_classifiers: List[Any] # TODO should be any generic type of classifier\n",
     "\n",
-    "    def __init__(self, classifier: Any = None, require_dense: Optional[List[bool]] = None):\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        use_first_layer_to_calculate_correlations: bool = False,\n",
+    "        classifier: Any = None,\n",
+    "        require_dense: Optional[List[bool]] = None\n",
+    "    ):\n",
     "        super(StackingWithFTests, self).__init__(classifier, require_dense)\n",
     "\n",
+    "        self.use_first_layer_to_calculate_correlations = use_first_layer_to_calculate_correlations\n",
+    "        \n",
     "        self.first_layer_classifiers = BinaryRelevance(\n",
     "            classifier=SVC(),\n",
     "            require_dense=[False, True]\n",
@@ -1246,8 +1253,6 @@
     "        self.second_layer_classifiers = []\n",
     "        self.correlated_labels_map = pd.DataFrame()\n",
     "\n",
-    "        self.should_calculate_correlation_based_on_train_data = True\n",
-    "        self.should_calculate_correlation_based_on_first_layer_predictions = False\n",
     "\n",
     "    def fit(self, X: Any, y: Any):\n",
     "        self.first_layer_classifiers.fit(X, y)\n",
@@ -1257,13 +1262,9 @@
     "        \n",
     "        alpha = 0.6\n",
     "\n",
-    "        if self.should_calculate_correlation_based_on_train_data:\n",
-    "            label_classifications = y\n",
-    "        elif self.should_calculate_correlation_based_on_first_layer_predictions:\n",
+    "        label_classifications = y\n",
+    "        if self.use_first_layer_to_calculate_correlations:\n",
     "            label_classifications = self.first_layer_classifiers.predict(X)\n",
-    "        else:\n",
-    "            label_classifications = y\n",
-    "            # TODO: for now, it is the default behaviour\n",
     "\n",
     "        f_tested_label_pairs = self.calculate_f_test_for_all_label_pairs(label_classifications)\n",
     "        self.correlated_labels_map = self.get_map_of_correlated_labels(f_tested_label_pairs, alpha)\n",
@@ -1382,7 +1383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1399,15 +1400,13 @@
     }
    ],
    "source": [
-    "first_model_clf = StackingWithFTests()\n",
-    "first_model_clf.should_calculate_correlation_based_on_train_data = False\n",
-    "first_model_clf.should_calculate_correlation_based_on_first_layer_predictions = True\n",
-    "first_model_clf.fit(X_train, y_train)\n"
+    "first_model_clf_1 = StackingWithFTests()\n",
+    "first_model_clf_1.fit(X_train, y_train)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1415,26 +1414,50 @@
       "text/plain": [
        "array([[0, 0, 0, 0, 0, 0],\n",
        "       [1, 0, 0, 0, 0, 0],\n",
-       "       [0, 0, 0, 0, 0, 0],\n",
+       "       [1, 0, 0, 0, 0, 0],\n",
        "       ...,\n",
        "       [0, 0, 0, 0, 0, 1],\n",
-       "       [0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 1],\n",
        "       [1, 0, 0, 0, 0, 0]], dtype=int64)"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "first_model_preds = first_model_clf.predict(X_test)\n",
-    "first_model_preds\n"
+    "first_model_1_preds = first_model_clf_1.predict(X_test)\n",
+    "first_model_1_preds\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "finished training meta classifier for label 0\n",
+      "finished training meta classifier for label 1\n",
+      "finished training meta classifier for label 2\n",
+      "finished training meta classifier for label 3\n",
+      "finished training meta classifier for label 4\n",
+      "finished training meta classifier for label 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_model_clf_2 = StackingWithFTests(use_first_layer_to_calculate_correlations=True)\n",
+    "first_model_clf_2.fit(X_train, y_train)\n",
+    "first_model_2_preds = first_model_clf_2.predict(X_test)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1447,15 +1470,21 @@
       "stacking hamming_loss 0.08416945373467112\n",
       "stacking accuracy 0.5869565217391305\n",
       "===\n",
-      "first_model hamming_loss:  0.08319397993311037\n",
-      "first_model accuracy:  0.5994983277591973\n",
+      "first_model (1) hamming_loss:  0.0838907469342252\n",
+      "first_model (1) accuracy:  0.6304347826086957\n",
+      "===\n",
+      "first_model (2) hamming_loss:  0.08319397993311037\n",
+      "first_model (2) accuracy:  0.5994983277591973\n",
       "===\n"
      ]
     }
    ],
    "source": [
-    "first_model_hamming_loss = metrics.hamming_loss(y_test, first_model_preds)\n",
-    "first_model_accuracy_score = metrics.accuracy_score(y_test, first_model_preds)\n",
+    "first_model_1_hamming_loss = metrics.hamming_loss(y_test, first_model_1_preds)\n",
+    "first_model_1_accuracy_score = metrics.accuracy_score(y_test, first_model_1_preds)\n",
+    "\n",
+    "first_model_2_hamming_loss = metrics.hamming_loss(y_test, first_model_2_preds)\n",
+    "first_model_2_accuracy_score = metrics.accuracy_score(y_test, first_model_2_preds)\n",
     "\n",
     "\n",
     "print(\"br hamming_loss\", regular_br_hamming_loss)\n",
@@ -1466,21 +1495,13 @@
     "print(\"stacking accuracy\", stacking_accuracy_score)\n",
     "print(\"===\")\n",
     "\n",
-    "print(\"first_model hamming_loss: \", first_model_hamming_loss)\n",
-    "print(\"first_model accuracy: \", first_model_accuracy_score)\n",
-    "print(\"===\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "print(\"first_model (1) hamming_loss: \", first_model_1_hamming_loss)\n",
+    "print(\"first_model (1) accuracy: \", first_model_1_accuracy_score)\n",
+    "print(\"===\")\n",
     "\n",
-    "first_model hamming_loss:  0.0838907469342252\n",
-    "first_model accuracy:  0.6304347826086957\n",
-    "===\n"
+    "print(\"first_model (2) hamming_loss: \", first_model_2_hamming_loss)\n",
+    "print(\"first_model (2) accuracy: \", first_model_2_accuracy_score)\n",
+    "print(\"===\")\n"
    ]
   },
   {
